// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > tests/fixtures/basic.vue > isProduction = false 1`] = `
"// basic.js
import { createElementBlock, openBlock, createElementVNode } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

console.log('Hello world');

const _sfc_main = {};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock("div", null, [...(_cache[0] || (_cache[0] = [
    createElementVNode("h1", null, "Hello World", -1 /* CACHED */)
  ]))]))
}
var basic = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render],['__file',"#FILE#"]]);

export { basic as default };
"
`;

exports[`rollup > tests/fixtures/basic.vue > isProduction = true 1`] = `
"// basic.js
import { createElementBlock, openBlock, createElementVNode } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

console.log('Hello world');

const _sfc_main = {};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock("div", null, [...(_cache[0] || (_cache[0] = [
    createElementVNode("h1", null, "Hello World", -1 /* CACHED */)
  ]))]))
}
var basic = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render]]);

export { basic as default };
"
`;

exports[`rollup > tests/fixtures/reactivity-transform.ts > isProduction = false 1`] = `
"// reactivity-transform.js
import { ref } from 'vue';

const ref1 = $ref("hello");
const ref2 = $(ref("hello"));
console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));
"
`;

exports[`rollup > tests/fixtures/reactivity-transform.ts > isProduction = true 1`] = `
"// reactivity-transform.js
import { ref } from 'vue';

const ref1 = $ref("hello");
const ref2 = $(ref("hello"));
console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));
"
`;

exports[`rollup > tests/fixtures/reactivity-transform.vue > isProduction = false 1`] = `
"// reactivity-transform.js
import { ref } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

const _sfc_main = {
  __name: 'reactivity-transform',
  setup(__props, { expose: __expose }) {
  __expose();

const ref1 = $ref('hello');
const ref2 = $(ref('hello'));

console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));

const __returned__ = { ref1, ref2, ref };
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true });
return __returned__
}

};
var reactivityTransform = /*#__PURE__*/_export_sfc(_sfc_main, [['__file',"#FILE#"]]);

export { reactivityTransform as default };
"
`;

exports[`rollup > tests/fixtures/reactivity-transform.vue > isProduction = true 1`] = `
"// reactivity-transform.js
import { ref } from 'vue';

const _sfc_main = {
  __name: 'reactivity-transform',
  setup(__props) {

const ref1 = $ref('hello');
const ref2 = $(ref('hello'));

console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));

return () => {}
}

};

export { _sfc_main as default };
"
`;

exports[`rollup > tests/fixtures/script-setup.vue > isProduction = false 1`] = `
"// script-setup.js
import { createElementBlock, openBlock, createElementVNode } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

const foo = 'bar';

const _sfc_main = {
  __name: 'script-setup',
  setup(__props, { expose: __expose }) {
  __expose();


const __returned__ = { foo };
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true });
return __returned__
}

};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock("div", null, [...(_cache[0] || (_cache[0] = [
    createElementVNode("h1", null, "Hello World", -1 /* CACHED */)
  ]))]))
}
var scriptSetup = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render],['__file',"#FILE#"]]);

export { scriptSetup as default };
"
`;

exports[`rollup > tests/fixtures/script-setup.vue > isProduction = true 1`] = `
"// script-setup.js
import { createElementBlock, openBlock, createElementVNode } from 'vue';

const foo = 'bar';

const _sfc_main = {
  __name: 'script-setup',
  setup(__props) {


return (_ctx, _cache) => {
  return (openBlock(), createElementBlock("div", null, [...(_cache[0] || (_cache[0] = [
    createElementVNode("h1", null, "Hello World", -1 /* CACHED */)
  ]))]))
}
}

};

export { _sfc_main as default };
"
`;

exports[`rollup > tests/fixtures/script-setup-ts.vue > isProduction = false 1`] = `
"// script-setup-ts.js
import { defineComponent, createElementBlock, openBlock, createElementVNode } from 'vue';

const str = "bar";
var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "script-setup-ts",
	props: {
		foo: {
			type: String,
			required: true,
			default: "123"
		},
		bar: {
			type: Number,
			required: true,
			default: 123
		},
		baz: {
			type: Boolean,
			required: true,
			default: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose({ str });
		const __returned__ = { str };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock("div", null, [..._cache[0] || (_cache[0] = [createElementVNode(
		"h1",
		null,
		"Hello World",
		-1
		/* CACHED */
	)])]);
}
var scriptSetupTs = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["__file", "#FILE#"]]);

export { scriptSetupTs as default };
"
`;

exports[`rollup > tests/fixtures/script-setup-ts.vue > isProduction = true 1`] = `
"// script-setup-ts.js
import { defineComponent, createElementBlock, openBlock, createElementVNode } from 'vue';

const str = "bar";
var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "script-setup-ts",
	props: {
		foo: { default: "123" },
		bar: { default: 123 },
		baz: {
			type: Boolean,
			default: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose({ str });
		return (_ctx, _cache) => {
			return openBlock(), createElementBlock("div", null, [..._cache[0] || (_cache[0] = [createElementVNode(
				"h1",
				null,
				"Hello World",
				-1
				/* CACHED */
			)])]);
		};
	}
});

export { _sfc_main as default };
"
`;

exports[`rollup > tests/fixtures/sfc-src.vue > isProduction = false 1`] = `
"// sfc-src.js
import { defineComponent, createElementBlock, openBlock, createElementVNode, toDisplayString } from 'vue';

var _sfc_main = defineComponent({ setup() {
	return [];
} });

function render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock("div", null, [_cache[0] || (_cache[0] = createElementVNode(
		"h1",
		null,
		"Hello World",
		-1
		/* CACHED */
	)), createElementVNode(
		"h2",
		null,
		toDisplayString(_ctx.msg),
		1
		/* TEXT */
	)]);
}

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var sfcSrc = /*#__PURE__*/_export_sfc(_sfc_main, [['render',render],['__file',"#FILE#"]]);

export { sfcSrc as default };
"
`;

exports[`rollup > tests/fixtures/sfc-src.vue > isProduction = true 1`] = `
"// sfc-src.js
import { defineComponent, createElementBlock, openBlock, createElementVNode, toDisplayString } from 'vue';

var _sfc_main = defineComponent({ setup() {
	return [];
} });

function render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock("div", null, [_cache[0] || (_cache[0] = createElementVNode(
		"h1",
		null,
		"Hello World",
		-1
		/* CACHED */
	)), createElementVNode(
		"h2",
		null,
		toDisplayString(_ctx.msg),
		1
		/* TEXT */
	)]);
}

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var sfcSrc = /*#__PURE__*/_export_sfc(_sfc_main, [['render',render]]);

export { sfcSrc as default };
"
`;

exports[`rollup > tests/fixtures/src-script.ts > isProduction = false 1`] = `
"// src-script.js
import { defineComponent } from 'vue';

var srcScript = defineComponent({ setup() {
	return [];
} });

export { srcScript as default };
"
`;

exports[`rollup > tests/fixtures/src-script.ts > isProduction = true 1`] = `
"// src-script.js
import { defineComponent } from 'vue';

var srcScript = defineComponent({ setup() {
	return [];
} });

export { srcScript as default };
"
`;

exports[`rollup > tests/fixtures/typescript.vue > isProduction = false 1`] = `
"// typescript.js
const str = "123";
const bool = true;
const count = 123;
function foo(str) {}
var _sfc_main = {};

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var typescript = /* @__PURE__ */ _export_sfc(_sfc_main, [["__file", "#FILE#"]]);

export { typescript as default };
"
`;

exports[`rollup > tests/fixtures/typescript.vue > isProduction = true 1`] = `
"// typescript.js
const str = "123";
const bool = true;
const count = 123;
function foo(str) {}
var _sfc_main = {};

export { _sfc_main as default };
"
`;
